--- a/src/config/versionador.conf
+++ b/src/config/versionador.conf
@@ -1,11 +1,14 @@
 DEBUG = True
 
 ABREVIATURAS = {
+    'af': 'apiflask',
     'bc': 'bcash',
     'bo': 'boleto',
     'dp': 'deposito',
+    'en': 'entrega',
     'ko': 'koin',
     'mp': 'mercadopago',
+    'mt': 'mptransparente',
     'pg': 'pagador',
     'pp': 'paypal',
     'ps': 'pagseguro',
@@ -13,14 +16,17 @@ ABREVIATURAS = {
 }
 
 PACOTES = {
-    'bcash': '/home/marcioduarte/projects/lojaintegrada/LI-Pagador-Bcash',
-    'boleto': '/home/marcioduarte/projects/lojaintegrada/LI-Pagador-Boleto',
-    'deposito': '/home/marcioduarte/projects/lojaintegrada/LI-Pagador-Deposito',
-    'koin': '/home/marcioduarte/projects/lojaintegrada/LI-Pagador-Koin',
-    'mercadopago': '/home/marcioduarte/projects/lojaintegrada/LI-Pagador-MercadoPago',
-    'pagador': '/home/marcioduarte/projects/lojaintegrada/LI-Pagador',
-    'pagseguro': '/home/marcioduarte/projects/lojaintegrada/LI-Pagador-PagSeguro',
-    'paypal': '/home/marcioduarte/projects/lojaintegrada/LI-Pagador-PayPal',
-    'repo': '/home/marcioduarte/projects/lojaintegrada/LI-Repo'
+    'apiflask': '/home/marcio/projects/lojaintegrada/LI-Api-Flask',
+    'bcash': '/home/marcio/projects/lojaintegrada/LI-Pagador-Bcash',
+    'boleto': '/home/marcio/projects/lojaintegrada/LI-Pagador-Boleto',
+    'deposito': '/home/marcio/projects/lojaintegrada/LI-Pagador-Deposito',
+    'entrega': '/home/marcio/projects/lojaintegrada/LI-Pagador-Entrega',
+    'koin': '/home/marcio/projects/lojaintegrada/LI-Pagador-Koin',
+    'mercadopago': '/home/marcio/projects/lojaintegrada/LI-Pagador-MercadoPago',
+    'mptransparente': '/home/marcio/projects/lojaintegrada/LI-Pagador-MercadoPago-Transparente',
+    'pagador': '/home/marcio/projects/lojaintegrada/LI-Pagador',
+    'pagseguro': '/home/marcio/projects/lojaintegrada/LI-Pagador-PagSeguro',
+    'paypal': '/home/marcio/projects/lojaintegrada/LI-Pagador-PayPal',
+    'repo': '/home/marcio/projects/lojaintegrada/LI-Repo'
 }
 
